Minor CSS fixes.Remove scroll-behavior css, since layout breaks in firefox on opening select dropdown. Add js smooth scrolling.

--- a/funnel/static/css/app.css
+++ b/funnel/static/css/app.css
@@ -36,10 +36,6 @@
     display: inline-block !important;
   }
 }
-html {
-  scroll-behavior: smooth;
-}
-
 .zero-bottom-margin {
   margin-bottom: 0;
 }
@@ -553,6 +549,7 @@ html {
 .slider-btn {
   position: absolute;
   top: 5px;
+  z-index: 2;
 }
 
 .slider-btn .mui-btn {
